# Coflect

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_PYPI.md  SECURITY.md  SUPPORT_MATRIX.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml
coflect/: __init__.py  cli.py  version.py
coflect/backends/: __init__.py  base.py  jax_backend.py  registry.py  tensorflow_backend.py  torch_backend.py
coflect/modules/: __init__.py  base.py  registry.py
coflect/modules/hilt/: __init__.py  launcher.py
coflect/modules/hilt/backend/: __init__.py  __main__.py  app.py
coflect/modules/hilt/backend/static/: app.js  index.html  styles.css
coflect/modules/hilt/common/: __init__.py  instruction_parser.py  notebook_bridge.py  synth_dataset.py  tf_model.py  torch_dataset.py
coflect/modules/hilt/forecast/: __init__.py  __main__.py  worker.py
coflect/modules/hilt/trainer/: __init__.py  __main__.py  train_tf.py  train_torch.py
coflect/modules/hilt/xai_worker/: __init__.py  __main__.py  gradcam.py  gradcam_tf.py  livecam_tf.py  worker_tf_gradcam.py  worker_tf_livecam.py  worker_torch_gradcam.py  worker_torch_livecam.py
coflect/modules/hitl/: __init__.py  launcher.py
coflect/modules/hitl/backend/: __init__.py  __main__.py  app.py
coflect/modules/hitl/backend/static/: app.js  index.html  styles.css
coflect/modules/hitl/common/: __init__.py  instruction_parser.py  messages.py  notebook_bridge.py  synth_dataset.py  synth_numpy.py  tf_model.py  torch_dataset.py  wire.py
coflect/modules/hitl/forecast/: __init__.py  __main__.py  worker.py
coflect/modules/hitl/trainer/: __init__.py  __main__.py  train_tf.py  train_torch.py
coflect/modules/hitl/xai_worker/: __init__.py  __main__.py  gradcam.py  gradcam_tf.py  livecam.py  livecam_tf.py  worker_tf_gradcam.py  worker_tf_livecam.py  worker_torch_gradcam.py  worker_torch_livecam.py
cpp/kernels/: CMakeLists.txt  README.md  kernel_stub.cpp
docs/: ANNOUNCEMENT_TEMPLATE.md  ARCHITECTURE.md  LAUNCH_CHECKLIST.md  RELEASE_PYPI.md
docs/benchmarks/: hilt_overhead_longrun_2026-03-01.json
examples/: README.md
examples/hilt/: 01_hilt_module_quickstart.ipynb  02_hilt_tensorflow_keras_workflow.ipynb  README.md  run_hilt_demo.py
examples/hitl/: 01_hitl_module_quickstart.ipynb  02_hitl_tensorflow_keras_workflow.ipynb  README.md  coflect_tf_xai_worker_local.py  run_hitl_demo.py
rust/encoder/: Cargo.toml  README.md
rust/encoder/src/: lib.rs
scripts/: benchmark_hilt_overhead.py  benchmark_hitl_overhead.py  release_check.sh  smoke_hilt.sh  smoke_hitl.sh
tests/: test_backend_registry.py  test_forecast_worker.py  test_hilt_launcher.py  test_hitl_launcher.py  test_instruction_parser.py  test_messages.py  test_module_registry.py  test_notebook_bridge.py  test_torch_dataset.py  test_version.py
