[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coflect"
version = "0.1.1"
description = "Coflect: Human In Loop Training framework (Torch-first, multi-backend roadmap)."
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
  { name = "Coflect Contributors" }
]
keywords = ["machine-learning", "human-in-loop", "hilt", "xai", "pytorch", "training"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "requests>=2.31,<3",
  "numpy>=1.26,<3",
  "pillow>=10,<12",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "torch>=2.4,<2.9",
  "torchvision>=0.19,<0.24",
]

[project.optional-dependencies]
tensorflow = [
  "tensorflow>=2.17,<2.21",
  "keras>=3.0,<4",
]
jax = [
  "jax>=0.4.30,<0.8",
  "jaxlib>=0.4.30,<0.8",
]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "build>=1.2,<2",
  "twine>=6,<7",
]

[project.urls]
Homepage = "https://github.com/coflect/coflect"
Documentation = "https://github.com/coflect/coflect"
Repository = "https://github.com/coflect/coflect"
Issues = "https://github.com/coflect/coflect/issues"

[project.scripts]
coflect-hilt-backend = "coflect.cli:run_hilt_backend"
coflect-hilt-ui = "coflect.cli:run_hilt_ui"
coflect-hilt-trainer-torch = "coflect.cli:run_hilt_trainer_torch"
coflect-hilt-xai-worker-torch = "coflect.cli:run_hilt_xai_worker_torch"
coflect-hilt-trainer-tf = "coflect.cli:run_hilt_trainer_tf"
coflect-hilt-xai-worker-tf = "coflect.cli:run_hilt_xai_worker_tf"
coflect-hilt-forecast-worker = "coflect.cli:run_hilt_forecast_worker"
coflect-hilt-run = "coflect.cli:run_hilt_stack"

[tool.setuptools.packages.find]
where = ["."]
include = ["coflect*"]

[tool.setuptools.package-data]
"coflect.modules.hilt.backend" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
ignore_missing_imports = true
